--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,17 +7,19 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.Base">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity >
+        <activity android:name=".CheeseDetailsActivity"
+            android:theme="@style/AppTheme">
         </activity>
-        <activity android:name=".CheeseDetailsActivity" >
-        </activity>
-        <activity android:name=".CollapsingToolbarActivity">
+        <activity android:name=".CollapsingToolbarActivity"
+            android:theme="@style/AppTheme">
         </activity>
     </application>
 
